dotnet/versioned_docs/version-1.12.0/api/class-browsercontext.mdx
---
id: class-browsercontext
title: "BrowserContext"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

* extends: [EventEmitter]

BrowserContexts provide a way to operate multiple independent browser sessions.

If a page opens another page, e.g. with a `window.open` call, the popup will belong to the parent page's browser context.

Playwright allows creation of "incognito" browser contexts with `browser.newContext()` method. "Incognito" browser contexts don't write any browsing data to disk.

```csharp
using var playwright = await Playwright.CreateAsync();
var browser = await playwright.Firefox.LaunchAsync(new BrowserTypeLaunchOptions { Headless = false });
// Create a new incognito browser context
var context = await browser.NewContextAsync();
// Create a new page inside context.
var page = await context.NewPageAsync();
await page.GotoAsync("https://bing.com");
// Dispose context once it is no longer needed.
await context.CloseAsync();
```


- [event BrowserContext.Close](./api/class-browsercontext.mdx#browser-context-event-close)
- [event BrowserContext.Page](./api/class-browsercontext.mdx#browser-context-event-page)
- [event BrowserContext.Request](./api/class-browsercontext.mdx#browser-context-event-request)
- [event BrowserContext.RequestFailed](./api/class-browsercontext.mdx#browser-context-event-request-failed)
- [event BrowserContext.RequestFinished](./api/class-browsercontext.mdx#browser-context-event-request-finished)
- [event BrowserContext.Response](./api/class-browsercontext.mdx#browser-context-event-response)
- [BrowserContext.AddCookiesAsync(cookies)](./api/class-browsercontext.mdx#browser-context-add-cookies)
- [BrowserContext.AddInitScriptAsync(script)](./api/class-browsercontext.mdx#browser-context-add-init-script)
- [BrowserContext.Browser](./api/class-browsercontext.mdx#browser-context-browser)
- [BrowserContext.ClearCookiesAsync()](./api/class-browsercontext.mdx#browser-context-clear-cookies)
- [BrowserContext.ClearPermissionsAsync()](./api/class-browsercontext.mdx#browser-context-clear-permissions)
- [BrowserContext.CloseAsync()](./api/class-browsercontext.mdx#browser-context-close)
- [BrowserContext.CookiesAsync(urls)](./api/class-browsercontext.mdx#browser-context-cookies)
- [BrowserContext.ExposeBindingAsync(name, callback, options)](./api/class-browsercontext.mdx#browser-context-expose-binding)
- [BrowserContext.ExposeFunctionAsync(name, callback)](./api/class-browsercontext.mdx#browser-context-expose-function)
- [BrowserContext.GrantPermissionsAsync(permissions, options)](./api/class-browsercontext.mdx#browser-context-grant-permissions)
- [BrowserContext.NewPageAsync()](./api/class-browsercontext.mdx#browser-context-new-page)
- [BrowserContext.Pages](./api/class-browsercontext.mdx#browser-context-pages)
- [BrowserContext.RouteAsync(url, handler)](./api/class-browsercontext.mdx#browser-context-route)
- [BrowserContext.RunAndWaitForPageAsync(action, options)](./api/class-browsercontext.mdx#browser-context-wait-for-page)
- [BrowserContext.SetDefaultNavigationTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout)
- [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout)
- [BrowserContext.SetExtraHTTPHeadersAsync(headers)](./api/class-browsercontext.mdx#browser-context-set-extra-http-headers)
- [BrowserContext.SetGeolocationAsync(geolocation)](./api/class-browsercontext.mdx#browser-context-set-geolocation)
- [BrowserContext.SetOfflineAsync(offline)](./api/class-browsercontext.mdx#browser-context-set-offline)
- [BrowserContext.StorageStateAsync(options)](./api/class-browsercontext.mdx#browser-context-storage-state)
- [BrowserContext.UnrouteAsync(url, handler)](./api/class-browsercontext.mdx#browser-context-unroute)
- [BrowserContext.WaitForPageAsync(action, options)](./api/class-browsercontext.mdx#browser-context-wait-for-page)
- [BrowserContext.Tracing](./api/class-browsercontext.mdx#browser-context-tracing)

## event BrowserContext.Close {#browser-context-event-close}
- type: &#60;[BrowserContext]&#62;

Emitted when Browser context gets closed. This might happen because of one of the following:
* Browser context is closed.
* Browser application is closed or crashed.
* The [Browser.CloseAsync()](./api/class-browser.mdx#browser-close) method was called.

## event BrowserContext.Page {#browser-context-event-page}
- type: &#60;[Page]&#62;

The event is emitted when a new Page is created in the BrowserContext. The page may still be loading. The event will also fire for popup pages. See also [event Page.Popup](./api/class-page.mdx#page-event-popup) to receive events about popups relevant to a specific page.

The earliest moment that page is available is when it has navigated to the initial url. For example, when opening a popup with `window.open('http://example.com')`, this event will fire when the network request to "http://example.com" is done and its response has started loading in the popup.

```csharp
var popup = await context.RunAndWaitForPageAsync(async =>
{
    await page.ClickAsync("a");
});
Console.WriteLine(await popup.EvaluateAsync<string>("location.href"));
```

:::note
Use [Page.WaitForLoadStateAsync(state, options)](./api/class-page.mdx#page-wait-for-load-state) to wait until the page gets to a particular state (you should not need it in most cases).
:::

## event BrowserContext.Request {#browser-context-event-request}
- type: &#60;[Request]&#62;

Emitted when a request is issued from any pages created through this context. The [request] object is read-only. To only listen for requests from a particular page, use [event Page.Request](./api/class-page.mdx#page-event-request).

In order to intercept and mutate requests, see [BrowserContext.RouteAsync(url, handler)](./api/class-browsercontext.mdx#browser-context-route) or [Page.RouteAsync(url, handler)](./api/class-page.mdx#page-route).

## event BrowserContext.RequestFailed {#browser-context-event-request-failed}
- type: &#60;[Request]&#62;

Emitted when a request fails, for example by timing out. To only listen for failed requests from a particular page, use [event Page.RequestFailed](./api/class-page.mdx#page-event-request-failed).

:::note
HTTP Error responses, such as 404 or 503, are still successful responses from HTTP standpoint, so request will complete with [event BrowserContext.RequestFinished](./api/class-browsercontext.mdx#browser-context-event-request-finished) event and not with [event BrowserContext.RequestFailed](./api/class-browsercontext.mdx#browser-context-event-request-failed).
:::

## event BrowserContext.RequestFinished {#browser-context-event-request-finished}
- type: &#60;[Request]&#62;

Emitted when a request finishes successfully after downloading the response body. For a successful response, the sequence of events is `request`, `response` and `requestfinished`. To listen for successful requests from a particular page, use [event Page.RequestFinished](./api/class-page.mdx#page-event-request-finished).

## event BrowserContext.Response {#browser-context-event-response}
- type: &#60;[Response]&#62;

Emitted when [response] status and headers are received for a request. For a successful response, the sequence of events is `request`, `response` and `requestfinished`. To listen for response events from a particular page, use [event Page.Response](./api/class-page.mdx#page-event-response).

## BrowserContext.AddCookiesAsync(cookies) {#browser-context-add-cookies}
- `cookies` &#60;[IEnumerable]<`Cookie`>&#62;
  - `Name` &#60;[string]&#62;
  - `Value` &#60;[string]&#62;
  - `Url` &#60;[string]?&#62; either url or domain / path are required. Optional.
  - `Domain` &#60;[string]?&#62; either url or domain / path are required Optional.
  - `Path` &#60;[string]?&#62; either url or domain / path are required Optional.
  - `Expires` &#60;[double]?&#62; Unix time in seconds. Optional.
  - `HttpOnly` &#60;[boolean]?&#62; Optional.
  - `Secure` &#60;[boolean]?&#62; Optional.
  - `SameSite` &#60;"Strict"|"Lax"|"None"&#62; Optional.
- returns: &#60;[void]&#62;

Adds cookies into this browser context. All pages within this context will have these cookies installed. Cookies can be obtained via [BrowserContext.CookiesAsync(urls)](./api/class-browsercontext.mdx#browser-context-cookies).

```csharp
await context.AddCookiesAsync(new[] { cookie1, cookie2 });
```

## BrowserContext.AddInitScriptAsync(script) {#browser-context-add-init-script}
- `script` &#60;[string]|[string]&#62; Script to be evaluated in all pages in the browser context.
- returns: &#60;[void]&#62;

Adds a script which would be evaluated in one of the following scenarios:
* Whenever a page is created in the browser context or is navigated.
* Whenever a child frame is attached or navigated in any page in the browser context. In this case, the script is evaluated in the context of the newly attached frame.

The script is evaluated after the document was created but before any of its scripts were run. This is useful to amend the JavaScript environment, e.g. to seed `Math.random`.

An example of overriding `Math.random` before the page loads:

```js
// preload.js
Math.random = () => 42;
```

```csharp
await context.AddInitScriptAsync(new BrowserContextAddInitScriptOptions { ScriptPath = "preload.js" });
```

:::note
The order of evaluation of multiple scripts installed via [BrowserContext.AddInitScriptAsync(script)](./api/class-browsercontext.mdx#browser-context-add-init-script) and [Page.AddInitScriptAsync(script)](./api/class-page.mdx#page-add-init-script) is not defined.
:::

## BrowserContext.Browser {#browser-context-browser}
- returns: &#60;[Browser]?&#62;

Returns the browser instance of the context. If it was launched as a persistent context null gets returned.

## BrowserContext.ClearCookiesAsync() {#browser-context-clear-cookies}
- returns: &#60;[void]&#62;

Clears context cookies.

## BrowserContext.ClearPermissionsAsync() {#browser-context-clear-permissions}
- returns: &#60;[void]&#62;

Clears all permission overrides for the browser context.

```csharp
var context = await browser.NewContextAsync();
await context.GrantPermissionsAsync(new[] { "clipboard-read" });
// Alternatively, you can use the helper class ContextPermissions 
//  to specify the permissions...
// do stuff ...
await context.ClearPermissionsAsync();
```

## BrowserContext.CloseAsync() {#browser-context-close}
- returns: &#60;[void]&#62;

Closes the browser context. All the pages that belong to the browser context will be closed.

:::note
The default browser context cannot be closed.
:::

## BrowserContext.CookiesAsync(urls) {#browser-context-cookies}
- `urls` &#60;[string]?|[IEnumerable]?<[string]>&#62; Optional list of URLs.
- returns: &#60;[IEnumerable]<`Cookie`>&#62;
  - `name` &#60;[string]&#62;
  - `value` &#60;[string]&#62;
  - `domain` &#60;[string]&#62;
  - `path` &#60;[string]&#62;
  - `expires` &#60;[double]&#62; Unix time in seconds.
  - `httpOnly` &#60;[boolean]&#62;
  - `secure` &#60;[boolean]&#62;
  - `sameSite` &#60;"Strict"|"Lax"|"None"&#62;

If no URLs are specified, this method returns all cookies. If URLs are specified, only cookies that affect those URLs are returned.

## BrowserContext.ExposeBindingAsync(name, callback, options) {#browser-context-expose-binding}
- `name` &#60;[string]&#62; Name of the function on the window object.
- `callback` &#60;[Action]<BindingSource, T, [TResult]>&#62; Callback function that will be called in the Playwright's context.
- `options` &#60;`BrowserContextExposeBindingOptions?`&#62;
  - `Handle` &#60;[boolean]?&#62; Whether to pass the argument as a handle, instead of passing by value. When passing a handle, only one argument is supported. When passing by value, multiple arguments are supported.
- returns: &#60;[void]&#62;

The method adds a function called `name` on the `window` object of every frame in every page in the context. When called, the function executes `callback` and returns a [Promise] which resolves to the return value of `callback`. If the `callback` returns a [Promise], it will be awaited.

The first argument of the `callback` function contains information about the caller: `{ browserContext: BrowserContext, page: Page, frame: Frame }`.

See [Page.ExposeBindingAsync(name, callback, options)](./api/class-page.mdx#page-expose-binding) for page-only version.

An example of exposing page URL to all frames in all pages in the context:

```csharp
using Microsoft.Playwright;
using System.Threading.Tasks;

class Program
{
    public static async Task Main()
    {
        using var playwright = await Playwright.CreateAsync();
        var browser = await playwright.Webkit.LaunchAsync(new BrowserTypeLaunchOptions { Headless = false });
        var context = await browser.NewContextAsync();

        await context.ExposeBindingAsync("pageURL", source => source.Page.Url);
        var page = await context.NewPageAsync();
        await page.SetContentAsync("<script>\n" +
        "  async function onClick() {\n" +
        "    document.querySelector('div').textContent = await window.pageURL();\n" +
        "  }\n" +
        "</script>\n" +
        "<button onclick=\"onClick()\">Click me</button>\n" +
        "<div></div>");
        await page.ClickAsync("button");
    }
}
```

An example of passing an element handle:

```csharp
var result = new TaskCompletionSource<string>();
var page = await Context.NewPageAsync();
await Context.ExposeBindingAsync("clicked", async (BindingSource _, IJSHandle t) =>
{
    return result.TrySetResult(await t.AsElement().TextContentAsync());
});

await page.SetContentAsync("<script>\n" +
  "  document.addEventListener('click', event => window.clicked(event.target));\n" +
  "</script>\n" +
  "<div>Click me</div>\n" +
  "<div>Or click me</div>\n");

await page.ClickAsync("div");
// Note: it makes sense to await the result here, because otherwise, the context 
//  gets closed and the binding function will throw an exception.
Assert.Equal("Click me", await result.Task);
```

## BrowserContext.ExposeFunctionAsync(name, callback) {#browser-context-expose-function}
- `name` &#60;[string]&#62; Name of the function on the window object.
- `callback` &#60;[Action]<T, [TResult]>&#62; Callback function that will be called in the Playwright's context.
- returns: &#60;[void]&#62;

The method adds a function called `name` on the `window` object of every frame in every page in the context. When called, the function executes `callback` and returns a [Promise] which resolves to the return value of `callback`.

If the `callback` returns a [Promise], it will be awaited.

See [Page.ExposeFunctionAsync(name, callback)](./api/class-page.mdx#page-expose-function) for page-only version.

An example of adding a `sha256` function to all pages in the context:

```csharp
using Microsoft.Playwright;
using System;
using System.Security.Cryptography;
using System.Threading.Tasks;

class BrowserContextExamples
{
    public static async Task Main()
    {
        using var playwright = await Playwright.CreateAsync();
        var browser = await playwright.Webkit.LaunchAsync(new BrowserTypeLaunchOptions { Headless = false });
        var context = await browser.NewContextAsync();

        await context.ExposeFunctionAsync("sha256", (string input) =>
        {
            return Convert.ToBase64String(
                SHA256.Create().ComputeHash(System.Text.Encoding.UTF8.GetBytes(input)));
        });

        var page = await context.NewPageAsync();
        await page.SetContentAsync("<script>\n" +
        "  async function onClick() {\n" +
        "    document.querySelector('div').textContent = await window.sha256('PLAYWRIGHT');\n" +
        "  }\n" +
        "</script>\n" +
        "<button onclick=\"onClick()\">Click me</button>\n" +
        "<div></div>");

        await page.ClickAsync("button");
        Console.WriteLine(await page.TextContentAsync("div"));
    }
}
```

## BrowserContext.GrantPermissionsAsync(permissions, options) {#browser-context-grant-permissions}
- `permissions` &#60;[IEnumerable]<[string]>&#62; A permission or an array of permissions to grant. Permissions can be one of the following values:
  * `'geolocation'`
  * `'midi'`
  * `'midi-sysex'` (system-exclusive midi)
  * `'notifications'`
  * `'push'`
  * `'camera'`
  * `'microphone'`
  * `'background-sync'`
  * `'ambient-light-sensor'`
  * `'accelerometer'`
  * `'gyroscope'`
  * `'magnetometer'`
  * `'accessibility-events'`
  * `'clipboard-read'`
  * `'clipboard-write'`
  * `'payment-handler'`
- `options` &#60;`BrowserContextGrantPermissionsOptions?`&#62;
  - `Origin` &#60;[string]?&#62; The [origin] to grant permissions to, e.g. "https://example.com".
- returns: &#60;[void]&#62;

Grants specified permissions to the browser context. Only grants corresponding permissions to the given origin if specified.

## BrowserContext.NewPageAsync() {#browser-context-new-page}
- returns: &#60;[Page]&#62;

Creates a new page in the browser context.

## BrowserContext.Pages {#browser-context-pages}
- returns: &#60;[IEnumerable]<[Page]>&#62;

Returns all open pages in the context.

## BrowserContext.RouteAsync(url, handler) {#browser-context-route}
- `url` &#60;[string]|[Regex]|[Func]<[string], bool>&#62; A glob pattern, regex pattern or predicate receiving [URL] to match while routing.
- `handler` &#60;[Action]<[Route]>&#62; handler function to route the request.
- returns: &#60;[void]&#62;

Routing provides the capability to modify network requests that are made by any page in the browser context. Once route is enabled, every request matching the url pattern will stall unless it's continued, fulfilled or aborted.

An example of a naive handler that aborts all image requests:

```csharp
var context = await browser.NewContextAsync();
var page = await context.NewPageAsync();
await context.RouteAsync("**/*.{png,jpg,jpeg}", r => r.AbortAsync());
await page.GotoAsync("https://theverge.com");
await browser.CloseAsync();
```

or the same snippet using a regex pattern instead:

```csharp
var context = await browser.NewContextAsync();
var page = await context.NewPageAsync();
await context.RouteAsync(new Regex("(\\.png$)|(\\.jpg$)"), r => r.AbortAsync());
await page.GotoAsync("https://theverge.com");
await browser.CloseAsync();
```

It is possible to examine the request to decide the route action. For example, mocking all requests that contain some post data, and leaving all other requests as is:

```csharp
await page.RouteAsync("/api/**", async r =>
{
    if (r.Request.PostData.Contains("my-string"))
        await r.FulfillAsync(body: "mocked-data");
    else
        await r.ContinueAsync();
});
```

Page routes (set up with [Page.RouteAsync(url, handler)](./api/class-page.mdx#page-route)) take precedence over browser context routes when request matches both handlers.

To remove a route with its handler you can use [BrowserContext.UnrouteAsync(url, handler)](./api/class-browsercontext.mdx#browser-context-unroute).

:::note
Enabling routing disables http cache.
:::

## BrowserContext.RunAndWaitForPageAsync(action, options) {#browser-context-wait-for-page}
- `options` &#60;`BrowserContextRunAndWaitForPageOptions?`&#62;
  - `Predicate` &#60;[Func]<[Page]?, bool>&#62; Receives the [Page] object and resolves to truthy value when the waiting should resolve.
  - `Timeout` &#60;[double]?&#62; Maximum time to wait for in milliseconds. Defaults to `30000` (30 seconds). Pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout).
- `action` &#60;[Func]<[Task]>&#62; Action that triggers the event.
- returns: &#60;[Page]&#62;

Performs action and waits for a new [Page] to be created in the context. If predicate is provided, it passes [Page] value into the `predicate` function and waits for `predicate(event)` to return a truthy value. Will throw an error if the context closes before new [Page] is created.

## BrowserContext.WaitForPageAsync(action, options) {#browser-context-wait-for-page}
- `action` &#60;[Func]<[Task]>&#62; Action that triggers the event.
- returns: &#60;[Page]&#62;

Performs action and waits for a new [Page] to be created in the context. If predicate is provided, it passes [Page] value into the `predicate` function and waits for `predicate(event)` to return a truthy value. Will throw an error if the context closes before new [Page] is created.

## BrowserContext.SetDefaultNavigationTimeout(timeout) {#browser-context-set-default-navigation-timeout}
- `timeout` &#60;[double]&#62; Maximum navigation time in milliseconds
- returns: &#60;[void]&#62;

This setting will change the default maximum navigation time for the following methods and related shortcuts:
* [Page.GoBackAsync(options)](./api/class-page.mdx#page-go-back)
* [Page.GoForwardAsync(options)](./api/class-page.mdx#page-go-forward)
* [Page.GotoAsync(url, options)](./api/class-page.mdx#page-goto)
* [Page.ReloadAsync(options)](./api/class-page.mdx#page-reload)
* [Page.SetContentAsync(html, options)](./api/class-page.mdx#page-set-content)
* [Page.RunAndWaitForNavigationAsync(action, options)](./api/class-page.mdx#page-wait-for-navigation)

:::note
[Page.SetDefaultNavigationTimeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout) and [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) take priority over [BrowserContext.SetDefaultNavigationTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout).
:::

## BrowserContext.SetDefaultTimeout(timeout) {#browser-context-set-default-timeout}
- `timeout` &#60;[double]&#62; Maximum time in milliseconds
- returns: &#60;[void]&#62;

This setting will change the default maximum time for all the methods accepting `timeout` option.

:::note
[Page.SetDefaultNavigationTimeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout), [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) and [BrowserContext.SetDefaultNavigationTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout) take priority over [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout).
:::

## BrowserContext.SetExtraHTTPHeadersAsync(headers) {#browser-context-set-extra-http-headers}
- `headers` &#60;[Map]<[string], [string]>&#62; An object containing additional HTTP headers to be sent with every request. All header values must be strings.
- returns: &#60;[void]&#62;

The extra HTTP headers will be sent with every request initiated by any page in the context. These headers are merged with page-specific extra HTTP headers set with [Page.SetExtraHTTPHeadersAsync(headers)](./api/class-page.mdx#page-set-extra-http-headers). If page overrides a particular header, page-specific header value will be used instead of the browser context header value.

:::note
[BrowserContext.SetExtraHTTPHeadersAsync(headers)](./api/class-browsercontext.mdx#browser-context-set-extra-http-headers) does not guarantee the order of headers in the outgoing requests.
:::

## BrowserContext.SetGeolocationAsync(geolocation) {#browser-context-set-geolocation}
- `geolocation` &#60;Geolocation?&#62;
  - `Latitude` &#60;[double]&#62; Latitude between -90 and 90.
  - `Longitude` &#60;[double]&#62; Longitude between -180 and 180.
  - `Accuracy` &#60;[double]?&#62; Non-negative accuracy value. Defaults to `0`.
- returns: &#60;[void]&#62;

Sets the context's geolocation. Passing `null` or `undefined` emulates position unavailable.

```csharp
await context.SetGeolocationAsync(new Geolocation()
{
    Latitude = 59.95f,
    Longitude = 30.31667f
});
```

:::note
Consider using [BrowserContext.GrantPermissionsAsync(permissions, options)](./api/class-browsercontext.mdx#browser-context-grant-permissions) to grant permissions for the browser context pages to read its geolocation.
:::

## BrowserContext.SetOfflineAsync(offline) {#browser-context-set-offline}
- `offline` &#60;[boolean]&#62; Whether to emulate network being offline for the browser context.
- returns: &#60;[void]&#62;

## BrowserContext.StorageStateAsync(options) {#browser-context-storage-state}
- `options` &#60;`BrowserContextStorageStateOptions?`&#62;
  - `Path` &#60;[string]?&#62; The file path to save the storage state to. If `path` is a relative path, then it is resolved relative to current working directory. If no path is provided, storage state is still returned, but won't be saved to the disk.
- returns: &#60;[string]&#62;

Returns storage state for this browser context, contains current cookies and local storage snapshot.

## BrowserContext.UnrouteAsync(url, handler) {#browser-context-unroute}
- `url` &#60;[string]|[Regex]|[Func]<[string], bool>&#62; A glob pattern, regex pattern or predicate receiving [URL] used to register a routing with [BrowserContext.RouteAsync(url, handler)](./api/class-browsercontext.mdx#browser-context-route).
- `handler` &#60;[Action]<[Route]?>&#62; Optional handler function used to register a routing with [BrowserContext.RouteAsync(url, handler)](./api/class-browsercontext.mdx#browser-context-route).
- returns: &#60;[void]&#62;

Removes a route created with [BrowserContext.RouteAsync(url, handler)](./api/class-browsercontext.mdx#browser-context-route). When `handler` is not specified, removes all routes for the `url`.

## BrowserContext.Tracing {#browser-context-tracing}
- type: &#60;[Tracing]&#62;

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[URL]: https://nodejs.org/api/url.html "URL"

[Action]: https://docs.microsoft.com/en-us/dotnet/api/system.action-1?view=net-5.0 "Action"
[Func]: https://docs.microsoft.com/en-us/dotnet/api/system.func-2?view=net-5.0 "Func"
[IEnumerable]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.ienumerable?view=net-5.0 "IEnumerable"
[TResult]: https://docs.microsoft.com/en-us/dotnet/api/system.threading.tasks.task-1?view=net-5.0 "TResult"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"